--- a/lm_eval/tasks/ruler/niah_single_1.yaml
+++ b/lm_eval/tasks/ruler/niah_single_1.yaml
@@ -15,12 +15,15 @@ metric_list:
   - metric: "4096"
     aggregation: !function common_utils.aggregate_metrics
     higher_is_better: true
-  # - metric: "8192"
-  #   aggregation: !function common_utils.aggregate_metrics
-  #   higher_is_better: true
-  # - metric: "16384"
-  #   aggregation: !function common_utils.aggregate_metrics
-  #   higher_is_better: true
+  - metric: "8192"
+    aggregation: !function common_utils.aggregate_metrics
+    higher_is_better: true
+  - metric: "16384"
+    aggregation: !function common_utils.aggregate_metrics
+    higher_is_better: true
+  - metric: "32768"
+    aggregation: !function common_utils.aggregate_metrics
+    higher_is_better: true
 generation_kwargs:
   do_sample: false
   temperature: 0.0
