--- a/lm_eval/tasks/ruler/niah_single_1.yaml
+++ b/lm_eval/tasks/ruler/niah_single_1.yaml
@@ -12,19 +12,19 @@ gen_prefix: "{{gen_prefix}}"
 target_delimiter: " "
 process_results: !function common_utils.process_results
 metric_list:
-  # - metric: "4096"
-  #   aggregation: !function common_utils.aggregate_metrics
-  #   higher_is_better: true
-  # - metric: "8192"
-  #   aggregation: !function common_utils.aggregate_metrics
-  #   higher_is_better: true
-  # - metric: "16384"
-  #   aggregation: !function common_utils.aggregate_metrics
-  #   higher_is_better: true
-  - metric: "32768"
+  - metric: "4096"
     aggregation: !function common_utils.aggregate_metrics
     higher_is_better: true
-generation_kwargs:
+  - metric: "8192"
+    aggregation: !function common_utils.aggregate_metrics
+    higher_is_better: true
+  - metric: "16384"
+    aggregation: !function common_utils.aggregate_metrics
+    higher_is_better: true
+#   - metric: "32768"
+#     aggregation: !function common_utils.aggregate_metrics
+#     higher_is_better: true
+# generation_kwargs:
   do_sample: false
   temperature: 0.0
   max_gen_toks: 112
