--- a/lm_eval/tasks/ruler/niah_single_1.yaml
+++ b/lm_eval/tasks/ruler/niah_single_1.yaml
@@ -24,7 +24,7 @@ metric_list:
 #   - metric: "32768"
 #     aggregation: !function common_utils.aggregate_metrics
 #     higher_is_better: true
-# generation_kwargs:
+generation_kwargs:
   do_sample: false
   temperature: 0.0
   max_gen_toks: 128
