--- a/lm_eval/tasks/ruler/ruler.yaml
+++ b/lm_eval/tasks/ruler/ruler.yaml
@@ -16,5 +16,9 @@ task:
 aggregate_metric_list:
   - metric: "4096"
     weight_by_size: False
+  - metric: "8192"
+    weight_by_size: Fals
+  - metric: "16384"
+    weight_by_size: False
 metadata:
   version: 1
