--- a/lm_eval/tasks/ruler/niah_single_1.yaml
+++ b/lm_eval/tasks/ruler/niah_single_1.yaml
@@ -21,9 +21,12 @@ metric_list:
   - metric: "16384"
     aggregation: !function common_utils.aggregate_metrics
     higher_is_better: true
-#   - metric: "32768"
-#     aggregation: !function common_utils.aggregate_metrics
-#     higher_is_better: true
+  - metric: "32768"
+    aggregation: !function common_utils.aggregate_metrics
+    higher_is_better: true
+  - metric: "65536"
+    aggregation: !function common_utils.aggregate_metrics
+    higher_is_better: true
 generation_kwargs:
   do_sample: false
   temperature: 0.0
