--- a/lm_eval/tasks/ruler/ruler.yaml
+++ b/lm_eval/tasks/ruler/ruler.yaml
@@ -17,8 +17,12 @@ aggregate_metric_list:
   - metric: "4096"
     weight_by_size: False
   - metric: "8192"
-    weight_by_size: Fals
+    weight_by_size: False
   - metric: "16384"
+    weight_by_size: False
+  - metric: "32768"
+    weight_by_size: False
+  - metric: "65536"
     weight_by_size: False
 metadata:
   version: 1
